--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
     <script src="src/main.js" defer></script>
   </head>
   <body>
-    <header class="logo"><img src="img/logo.png"></header>
-    <nav class="clothes">
-      <div class="b"><img src="img/blue_t.png"></div>
-      <div class="b"><img src="img/blue_p.png"></div>
-      <div class="b"><img src="img/blue_s.png"></div>
-      <div class="btn_b"><button>Blue</button></div>
-      <div class="btn_y"><button>Yellow</button></div>
-      <div class="btn_p"><button>Pink</button></div>
-    </nav>
-    <main class="list">
-      <div class="list_ch"><img src="img/blue_p.png"></div>
-      <div class="list_ch"><img src="img/blue_s.png"></div>
-      <div class="list_ch"><img src="img/blue_t.png"></div>
-      <div class="list_ch"><img src="img/pink_p.png"></div>
-      <div class="list_ch"><img src="img/pink_t.png"></div>
-      <div class="list_ch"><img src="img/pink_s.png"></div>
-      <div class="list_ch"><img src="img/yellow_p.png"></div>
-      <div class="list_ch"><img src="img/yellow_s.png"></div>
-      <div class="list_ch"><img src="img/yellow_t.png"></div>
-    </main>
+    <!-- logo -->
+    <img src="img/logo.png" alt="logo" class="logo" />
+    <!-- button -->
+    <section class="buttons">
+    <button class="btn">
+      <img src="img/blue_p.png" class="imgBtn" />
+    </button>
+    <button class="btn">
+      <img src="img/blue_t.png" class="imgBtn" />
+    </button>
+    <button class="btn">
+      <img src="img/blue_s.png" class="imgBtn" />
+    </button>
+    <button class="btn colorBtn blue">Blue</button>
+    <button class="btn colorBtn yellow">Yellow</button>
+    <button class="btn colorBtn pink">Pink</button>
+  </section>
+    <!-- item -->
+    <ul class="items">
+      <li class="item">
+        <img src="img/blue_p.png" alt="옷" class="item__thumbnail" />
+        <span class="item__description">male, large</span>
+      </li>
+    </ul>
   </body>
 </html>
